Client multithreaded